# table1837-tavernops

./: .env.staging  .gitignore  CLAUDE.md  DEPLOY_TO_CLOUDFLARE.md  IMPLEMENTATION_PLAN.md  README.md  deploy.sh  netlify.toml  nixpacks.toml  railway.toml  setup-supabase.sql  wrangler.toml
.github/workflows/: cloudflare-pages.yml  deploy-boss-stack.yml
backend/: Cargo.toml
backend/src/models/: cms.rs
core/: Cargo.toml  build.sh
core/src/: lib.rs  search.rs
frontend/: .env.development  .npmrc  _headers  index.html  package.json  vite.config.ts  wrangler.toml
frontend/src/: App.tsx  index.css  main.tsx  service-worker.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/admin/: PourCostCalculator.tsx
frontend/src/components/auth/: AuthWrapper.tsx
frontend/src/components/layout/: Hero.tsx  Navigation.tsx  ParallaxBackground.tsx  TabContent.tsx
frontend/src/components/staff/: DynamicChecklists.tsx  EightySixList.tsx
frontend/src/components/ui/: CommandPalette.tsx  GlassmorphicCard.tsx
frontend/src/config/: temp-config.ts
frontend/src/hooks/: useContextAwareContent.ts  useFuzzySearch.ts  usePusher.ts  useScrollPosition.ts  useWebSocket.ts
frontend/src/monitoring/: sentry.ts
frontend/src/services/: pusher.ts
frontend/src/styles/: auth.css  design-tokens.css  glassmorphic.css  global.css  hero.css
infrastructure/: boss-stack-env.example  cloudflare-setup.js  deploy-boss-stack.sh  deta-microservices.py  dns-config.md  github-secrets.md  neon-config.ts  neon-schema.sql  quick-deploy.sh  setup-neon-database.sh  staging-config.js
infrastructure/rust-edge-workers/: Cargo.toml
infrastructure/rust-edge-workers/src/: lib.rs
netlify/functions/: menu-ocr.ts
scripts/: setup-cloudflare.sh
src/: index.js
