[package]
name = "table1837-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
rustls = "0.21"
rustls-pemfile = "1"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
async-trait = "0.1"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
aws-sdk-s3 = "1.9"
aws-config = "1.0"
tesseract = "0.15"
image = "0.24"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1