[package]
name = "table1837-edge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
blake3 = "1.5"
dashmap = "5.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true